src/components/SpotlightCard.css
.card-spotlight {
    position: relative;
    padding: 1rem;
    border-radius: 0;
    overflow: hidden;
    border-style: solid;
    border-width: var(--border-width-visual);
    border-image-source: var(--texture-url);
    border-image-slice: var(--slice-amount) fill;
    border-image-repeat: stretch;
    image-rendering: pixelated;

    --rotate-x: 0deg;
    --rotate-y: 0deg;
    transform-style: preserve-3d;
    transform: perspective(800px) rotateX(var(--rotate-x)) rotateY(var(--rotate-y)) scale(1);
    transition: transform 0.06s cubic-bezier(0.33, 1, 0.68, 1),
        filter 0.01s linear, box-shadow 0.15s ease;

    cursor: pointer;
    filter: brightness(1);
}

/* Al pasar el mouse */
.card-spotlight:hover {
    transform: perspective(800px) rotateX(var(--rotate-x)) rotateY(var(--rotate-y)) scale(1.05);
    filter: brightness(1.5);
}

.card-spotlight.hovered {
    box-shadow:
            0 0 0 calc(1px * var(--pixel-size)) rgba(255, 255, 255, 1.0),
            0 0 calc(5px * var(--pixel-size)) calc(1px * var(--pixel-size)) rgba(255, 255, 255, 0.3);
}

/* Contenido en primer plano */
.card-spotlight>* {
    position: relative;
    z-index: 2;
    transform: translateZ(65px);
}

